# mycobot_ros2

./: LICENSE  README.md
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: hello_moveit_v1.cpp  hello_moveit_v2.cpp  plan_around_objects.cpp
hello_moveit_task_constructor/: CMakeLists.txt  package.xml
hello_moveit_task_constructor/config/: mtc_node_params.yaml
hello_moveit_task_constructor/include/hello_moveit_task_constructor/: pick_place_task.h
hello_moveit_task_constructor/launch/: demo.launch.py  run.launch.py
hello_moveit_task_constructor/scripts/: robot.sh
hello_moveit_task_constructor/src/: alternative_path_costs.cpp  cartesian.cpp  fallbacks_move_to.cpp  ik_clearance_cost.cpp  modular.cpp  mtc_node.cpp  pick_place_demo.cpp  pick_place_demo_parameters.yaml  pick_place_task.cpp
hello_mtc_with_perception/: CMakeLists.txt  package.xml
hello_mtc_with_perception/config/: get_planning_scene_server.yaml  mtc_node_params.yaml  ros_gz_bridge.yaml
hello_mtc_with_perception/include/hello_mtc_with_perception/: README.md  cluster_extraction.h  get_planning_scene_client.h  normals_curvature_and_rsd_estimation.h  object_segmentation.h  plane_segmentation.h
hello_mtc_with_perception/launch/: demo.launch.py  get_planning_scene_server.launch.py  point_cloud_viewer.launch.py  robot.launch.py  run.launch.py
hello_mtc_with_perception/rviz/: point_cloud_viewer.rviz
hello_mtc_with_perception/scripts/: pointcloud.sh  robot.sh
hello_mtc_with_perception/src/: README.md  cluster_extraction.cpp  get_planning_scene_client.cpp  get_planning_scene_server.cpp  mtc_node.cpp  normals_curvature_and_rsd_estimation.cpp  object_segmentation.cpp  plane_segmentation.cpp
hello_mtc_with_perception/urdf/: mycobot_280.urdf.xacro
mycobot_description/: CMakeLists.txt  README.md  package.xml
mycobot_description/launch/: mycobot_280_arduino_view_description.launch.py  robot_state_publisher.launch.py
mycobot_description/meshes/mycobot_280/: link5.dae
mycobot_description/rviz/: mycobot_280_arduino_view_description.rviz  mycobot_280_description.rviz
mycobot_description/urdf/: mycobot_280_urdf.xacro
mycobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  mycobot_280_ros2_control.urdf.xacro
mycobot_description/urdf/mech/: adaptive_gripper.xacro  g_shape_base_v2_0.urdf.xacro  g_shape_base_v2_0.xacro  mycobot_280_arm.urdf.xacro
mycobot_description/urdf/robots/: mycobot_280.urdf.xacro
mycobot_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
mycobot_gazebo/: CMakeLists.txt  README.md  package.xml
mycobot_gazebo/config/: mycobot_280_controllers.yaml  ros_gz_bridge.yaml
mycobot_gazebo/include/: README.md
mycobot_gazebo/launch/: mycobot.gazebo.launch copy.py  mycobot.gazebo.launch.py  mycobot_280_arduino_bringup_classic_gazebo.launch.py  mycobot_280_arduino_bringup_gazebo.launch.py  mycobot_280_arduino_bringup_ros2_control_classic_gazebo.launch.py  mycobot_280_arduino_bringup_ros2_control_gazebo.launch.py
mycobot_gazebo/models/aws_robomaker_residential_ShoeRack_01/: model.sdf
mycobot_gazebo/models/brown_table/: model.config  model.sdf
mycobot_gazebo/models/cheezit_big_original/: model.config  model.sdf
mycobot_gazebo/models/coke_can/: model.sdf
mycobot_gazebo/models/gelatin_box/: model.config  model.sdf
mycobot_gazebo/models/green_cylinder/: model.config  model.sdf
mycobot_gazebo/models/ground_plane/: model.sdf
mycobot_gazebo/models/mustard/: model.config  model.sdf
mycobot_gazebo/scripts/: example_joint_trajectory_publisher.py  test_set_joint_position_publisher.py  test_set_joint_trajectory_publisher.py
mycobot_gazebo/src/: example_joint_trajectory_publisher.cpp
mycobot_gazebo/urdf/: mycobot_280_classic_gazebo.urdf  mycobot_280_classic_gazebo.urdf.xacro  mycobot_280_gazebo.urdf  mycobot_280_gazebo.urdf.xacro
mycobot_gazebo/worlds/: cylinder.world  cylinder_perception.world  empty.world  empty_classic.world  house.world  house_classic.world  pick_and_place_demo.world  small_warehouse_classic.world
mycobot_interfaces/: CMakeLists.txt  package.xml
mycobot_interfaces/srv/: GetPlanningScene.srv
mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
mycobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_280.ros2_control.xacro  mycobot_280.srdf  mycobot_280.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml  stomp_planning.yaml
mycobot_moveit_config/launch/: demo.launch.py  load_ros2_controllers.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_moveit_config/rviz/: move_group.rviz
mycobot_moveit_config/srdf/: gedit mycobot_280.srdf
mycobot_moveit_demos/: CMakeLists.txt  package.xml
mycobot_moveit_demos/src/: hello_moveit.cpp  plan_around_objects.cpp
mycobot_mtc_demos/: CMakeLists.txt  package.xml
mycobot_mtc_demos/launch/: mtc_demos.launch.py
mycobot_mtc_demos/rviz/: mtc_demos.rviz
mycobot_mtc_demos/src/: alternative_path_costs.cpp  cartesian.cpp  fallbacks_move_to.cpp  ik_clearance_cost.cpp  modular.cpp
mycobot_mtc_pick_place_demo/: CMakeLists.txt  package.xml
mycobot_mtc_pick_place_demo/config/: get_planning_scene_server.yaml  mtc_node_params.yaml
mycobot_mtc_pick_place_demo/launch/: get_planning_scene_server.launch.py  pick_place_demo.launch.py  point_cloud_viewer.launch.py
mycobot_mtc_pick_place_demo/rviz/: point_cloud_viewer.rviz
mycobot_mtc_pick_place_demo/scripts/: pointcloud.sh  robot.sh
mycobot_mtc_pick_place_demo/src/: cluster_extraction.cpp  get_planning_scene_client.cpp  get_planning_scene_server.cpp  mtc_node.cpp  normals_curvature_and_rsd_estimation.cpp  object_segmentation.cpp  plane_segmentation.cpp
mycobot_ros2/: CMakeLists.txt  README.md  package.xml
mycobot_system_tests/: CMakeLists.txt  README.md  package.xml
mycobot_system_tests/scripts/: arm_gripper_loop_controller.py
mycobot_system_tests/src/: arm_gripper_loop_controller.cpp
(+93 files in other folders)
